Implement log file download